# core-native-sdl

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  toolchain.cmake
src/: draw.c  engine_event.c  ffmpeg_event.c  kernel_api.c  kernel_error.c  kernel_event.c  kernel_runtime.c  lua.c  lua.h  main.c  native_draw.c  native_http.c  native_json.c  sdl.h  sdl_api.c  sdl_events.c  sdl_primitives.c  sdl_text.c  zeebo.h  zeebo_engine.h
src/cjson/: native_json.c
src/curl/: native_http.c
src/curses/: main.c
src/lua/: lib.c  main.c
src/sdl/: main.c  native_draw.c  native_event.c  native_input.c  native_screen.c
